[bdist_wheel]
universal = 1

[metadata]
name = emthub
version = 0.0.1
author = Tom McDermott
author_email = tom@meltran.com
description = EMTHub: Electromagnetic transient model-building and validatoin.
long_description = file: PYPIDESC.md
long_description_content_type = text/markdown
license_files = license.md
license = BSD
url = https://github.com/temcdrm/EMTHub
project_urls =
    Bug Tracker = https://github.com/temcdrm/EMTHub/issues
classifiers = 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
install_requires =
    SPARQLWrapper>=2.0.0
    numpy>=1.23.0
    pandas>=1.4.3
    lxml>=4.9.0
    scipy>=1.8.1

[options.packages.find]
where = src_python

[options.package_data]
cimhub =
    *.json
