[bdist_wheel]
universal = 1

[metadata]
name = emthub
version = attr: emthub.__version__
author = Tom McDermott
author_email = tom@meltran.com
description = EMTHub: Electromagnetic transient model-building and validation.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
license = Apache-2.0
url = https://github.com/temcdrm/EMTHub
project_urls =
    Bug Tracker = https://github.com/temcdrm/EMTHub/issues
classifiers = 
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
install_requires =
    numpy>=2.1.3
    pandas>=2.3.3
    lxml>=5.2.2
    scipy>=1.14.0
    networkx>=3.6.1
    otsrdflib>=0.5.0
    matplotlib>=3.9.2

[options.packages.find]
where = src

[options.package_data]
cimhub =
    *.json
